tests/pos-macros/macros-in-same-project-3/Baz.scala
object Baz {
  Bar.myMacro() // error
}
